# simplesql

./: CMakeLists.txt  README.md  make_deps.sh
gencpp/: SQLite.interp  SQLite.tokens  SQLiteBaseVisitor.cpp  SQLiteBaseVisitor.h  SQLiteLexer.cpp  SQLiteLexer.h  SQLiteLexer.interp  SQLiteLexer.tokens  SQLiteParser.cpp  SQLiteParser.h  SQLiteVisitor.cpp  SQLiteVisitor.h  THESE_FILES_ARE_AUTO_GENERATED.txt
include/: simplesql.h  simplesql_tree.h
misc/: SQLite.g4  antlr_gen_cpp.sh
src/: CMakeLists.txt  _sqlexpr_eval.hpp  _sqlexpr_private.h  antlr_visitor.cpp  exec_tree.hpp  main.cpp  sqlite_functions.cpp  sqlite_functions.h
tests/: CMakeLists.txt  test_exec.cpp  test_expr_simple.cpp  test_functions.cpp  test_select.cpp  testmain.cpp
